--- a/MainApp/templates/MainApp/Base_form.html
+++ b/MainApp/templates/MainApp/Base_form.html
@@ -28,6 +28,7 @@ tr:nth-child(even) {
         <th>Start date</th>
         <th>Finish date</th>
         <th>Responsible person</th>
+        <th>Actions</th>
     </tr>
     {% for task in tasks %}
         <tr>
@@ -35,8 +36,14 @@ tr:nth-child(even) {
             <td>{{ task.start_date }}</td>
             <td>{{ task.finish_date }}</td>
             <td>{{ task.person.name}}</td>
+            <td>
+                <button type="button">
+                <a href="http://localhost:8000/delete-task/{{ task.id }}">Delete Task</a>
+                </button>
+            </td>
         </tr>
     {% endfor %}
 </table>
+<br><button type="button"><a href="http://localhost:8000/add-task/">Add Task</a></button><br>
 </body>
 </html>
