PersonCreateView, PersonDeleteView, PersonEditView

--- a/MainApp/templates/MainApp/Base_form.html
+++ b/MainApp/templates/MainApp/Base_form.html
@@ -75,7 +75,7 @@ tr:nth-child(even) {
                 <a href="http://localhost:8000/edit-person/{{ person.id }}">Edit</a>
                 </button>
                 <button type="button">
-                <a href="http://localhost:8000/person-task/{{ person.id }}/">Delete</a>
+                <a href="http://localhost:8000/delete-person/{{ person.id }}/">Delete</a>
                 </button>
             </td>
         </tr>
