--- a/MainApp/templates/MainApp/Base_form.html
+++ b/MainApp/templates/MainApp/Base_form.html
@@ -37,11 +37,12 @@ tr:nth-child(even) {
         <th>Finish date</th>
         <th>Responsible person</th>
         <th>Machines</th>
+        <th>Done</th>
         <th>Actions</th>
     </tr>
     {% for task in tasks %}
         <tr>
-            <td>{{ task.name }}</td>
+            <td><a href="http://localhost:8000/task-details/{{ task.id }}">{{ task.name }}</td>
             <td>{{ task.start_date }}</td>
             <td>{{ task.finish_date }}</td>
             <td>{{ task.person.full_name }}</td>
@@ -50,12 +51,16 @@ tr:nth-child(even) {
                 <li>{{ machine.machine_model }}</li>
                 {% endfor %}
             </td>
+            <td>{{ task.done }}</td>
             <td>
                 <button type="button">
                 <a href="http://localhost:8000/edit-task/{{ task.id }}">Edit</a>
                 </button>
                 <button type="button">
                 <a href="http://localhost:8000/delete-task/{{ task.id }}/">Delete</a>
+                </button>
+                <button type="button">
+                <a href="http://localhost:8000/add-image">Add images</a>
                 </button>
             </td>
         </tr>
@@ -66,7 +71,7 @@ tr:nth-child(even) {
     <tr>
         <th>Name of person</th>
         <th>Position</th>
-        <th>Task</th>
+        <th>Tasks</th>
         <th>Actions</th>
     </tr>
     {% for person in persons %}
@@ -94,7 +99,7 @@ tr:nth-child(even) {
     <tr>
         <th>Machine model</th>
         <th>Description</th>
-        <th>Task</th>
+        <th>Tasks</th>
         <th>Actions</th>
     </tr>
     {% for machine in machines %}
@@ -103,7 +108,7 @@ tr:nth-child(even) {
             <td>{{ machine.description }}</td>
             <td>
                 {% for task in machine.task_set.all %}
-                <li>{{ task.name }}</li>
+                    <li>{{ task.name }}</li>
                 {% endfor %}
             </td>
             <td>
