--- a/MainApp/templates/MainApp/image_form.html
+++ b/MainApp/templates/MainApp/image_form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add Task</title>
+    <title>Add Image</title>
 </head>
 <body>
     <form action="" method="post" enctype="multipart/form-data">
