templates changes, new buttons

--- a/MainApp/templates/MainApp/Base_form.html
+++ b/MainApp/templates/MainApp/Base_form.html
@@ -64,13 +64,11 @@ tr:nth-child(even) {
                 <button type="button">
                 <a href="http://localhost:8000/delete-task/{{ task.id }}/">Delete</a>
                 </button>
-                <button type="button">
-                <a href="http://localhost:8000/add-image">Add images</a>
-                </button>
             </td>
         </tr>
     {% endfor %}
 </table>
-<br><button type="button"><a href="http://localhost:8000/add-task/">Add Task</a></button><br><br>
+<br><button type="button"><a href="http://localhost:8000/add-task/">Add Task</a></button>
+<button type="button"><a href="http://localhost:8000/add-image">Add Image</a></button><br><br>
 </body>
 </html>
