--- a/MainApp/templates/MainApp/machine_update_form.html
+++ b/MainApp/templates/MainApp/machine_update_form.html
@@ -9,8 +9,8 @@
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Save"><br>
-        <br><button type="button"><a href="http://localhost:8000">List of tasks</a></button><br><br>
-        <button type="button"><a href="http://localhost:8000/machine-list/">List of machines</a></button><br><br>
+        <br><button type="button"><a href="/">List of tasks</a></button><br><br>
+        <button type="button"><a href="/machine-list/">List of machines</a></button><br><br>
     </form>
 </body>
 </html>
